...
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="First Name"/>

        <EditText
            android:id="@+id/addCustomerFirstNameField"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
...
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="Last Name"
            />

        <EditText
            android:id="@+id/addCustomerLastNameField"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
...
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="Email"/>

        <EditText
            android:id="@+id/addCustomerEmailAddressField"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
...
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <Button
        android:id="@+id/addCustomerCreateCustomerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:text="Create Customer"
...
