...
        android:text="Back to Customer Actions"/>

    <Button
        android:id="@+id/createCustomerSuccessToMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createCustomerSuccessErrorText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="Back to Main"/>

    <TextView
        android:id="@+id/createCustomerSuccessErrorText"
...
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="Error Message Area"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/createCustomerSuccessPrintCardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createCustomerSuccessEmailText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Print Customer Card"/>
...
