<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LookupCustomerActivity">

    <Button
        android:id="@+id/scanCustomerCardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Scan Customer Card"/>


    <TextView
        android:id="@+id/firstNameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scanCustomerCardButton"
        android:text="First Name"/>

    <TextView
        android:id="@+id/firstNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/scanCustomerCardButton"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/firstNameLabelTextView"
        android:ems="10"/>

    <TextView
        android:id="@+id/lastNameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/firstNameField"
        android:text="Last Name"/>

    <TextView
        android:id="@+id/lastNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/lastNameLabelTextView"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/lastNameLabelTextView"
        android:ems="10"/>

    <TextView
        android:id="@+id/emailLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lastNameField"
        android:text="Email"/>

    <TextView
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lastNameField"
        android:layout_alignLeft="@+id/lastNameField"
        android:layout_alignRight="@+id/lastNameField"
        android:layout_alignStart="@+id/lastNameField"
        android:layout_alignTop="@+id/emailLabelTextView"
        android:ems="10"/>

    <TextView
        android:id="@+id/customerIdLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/emailField"
        android:text="Id"/>

    <TextView
        android:id="@+id/customerIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/emailField"
        android:layout_alignLeft="@+id/emailField"
        android:layout_alignRight="@+id/emailField"
        android:layout_alignStart="@+id/emailField"
        android:layout_below="@+id/emailField"
        android:ems="10"/>


    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/selectCustomerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/errorMessageTextView"
        android:layout_centerHorizontal="true"
        android:text="Select Customer"/>


</RelativeLayout>
